--- a/.gitignore
+++ b/.gitignore
@@ -5440,3 +5440,158 @@ web-server/node_modules/wordwrap/example/meat.js
 web-server/node_modules/wordwrap/test/break.js
 web-server/node_modules/wordwrap/test/idleness.txt
 web-server/node_modules/wordwrap/test/wrap.js
+task-manager/node_modules/append-field/.npmignore
+task-manager/node_modules/append-field/index.js
+task-manager/node_modules/append-field/LICENSE
+task-manager/node_modules/append-field/package.json
+task-manager/node_modules/append-field/README.md
+task-manager/node_modules/append-field/lib/parse-path.js
+task-manager/node_modules/append-field/lib/set-value.js
+task-manager/node_modules/append-field/test/forms.js
+task-manager/node_modules/buffer-from/index.js
+task-manager/node_modules/buffer-from/LICENSE
+task-manager/node_modules/buffer-from/package.json
+task-manager/node_modules/buffer-from/readme.md
+task-manager/node_modules/busboy/.eslintrc.js
+task-manager/node_modules/busboy/LICENSE
+task-manager/node_modules/busboy/package.json
+task-manager/node_modules/busboy/README.md
+task-manager/node_modules/busboy/.github/workflows/ci.yml
+task-manager/node_modules/busboy/.github/workflows/lint.yml
+task-manager/node_modules/busboy/bench/bench-multipart-fields-100mb-big.js
+task-manager/node_modules/busboy/bench/bench-multipart-fields-100mb-small.js
+task-manager/node_modules/busboy/bench/bench-multipart-files-100mb-big.js
+task-manager/node_modules/busboy/bench/bench-multipart-files-100mb-small.js
+task-manager/node_modules/busboy/bench/bench-urlencoded-fields-100pairs-small.js
+task-manager/node_modules/busboy/bench/bench-urlencoded-fields-900pairs-small-alt.js
+task-manager/node_modules/busboy/lib/index.js
+task-manager/node_modules/busboy/lib/utils.js
+task-manager/node_modules/busboy/lib/types/multipart.js
+task-manager/node_modules/busboy/lib/types/urlencoded.js
+task-manager/node_modules/busboy/test/common.js
+task-manager/node_modules/busboy/test/test-types-multipart-charsets.js
+task-manager/node_modules/busboy/test/test-types-multipart-stream-pause.js
+task-manager/node_modules/busboy/test/test-types-multipart.js
+task-manager/node_modules/busboy/test/test-types-urlencoded.js
+task-manager/node_modules/busboy/test/test.js
+task-manager/node_modules/concat-stream/index.js
+task-manager/node_modules/concat-stream/LICENSE
+task-manager/node_modules/concat-stream/package.json
+task-manager/node_modules/concat-stream/readme.md
+task-manager/node_modules/concat-stream/node_modules/readable-stream/.travis.yml
+task-manager/node_modules/concat-stream/node_modules/readable-stream/CONTRIBUTING.md
+task-manager/node_modules/concat-stream/node_modules/readable-stream/duplex-browser.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/duplex.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/GOVERNANCE.md
+task-manager/node_modules/concat-stream/node_modules/readable-stream/LICENSE
+task-manager/node_modules/concat-stream/node_modules/readable-stream/package.json
+task-manager/node_modules/concat-stream/node_modules/readable-stream/passthrough.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/readable-browser.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/readable.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/README.md
+task-manager/node_modules/concat-stream/node_modules/readable-stream/transform.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/writable-browser.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/writable.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/doc/wg-meetings/2015-01-30.md
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_duplex.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_passthrough.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_readable.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_transform.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/_stream_writable.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/internal/streams/BufferList.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/internal/streams/destroy.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/internal/streams/stream-browser.js
+task-manager/node_modules/concat-stream/node_modules/readable-stream/lib/internal/streams/stream.js
+task-manager/node_modules/concat-stream/node_modules/safe-buffer/index.d.ts
+task-manager/node_modules/concat-stream/node_modules/safe-buffer/index.js
+task-manager/node_modules/concat-stream/node_modules/safe-buffer/LICENSE
+task-manager/node_modules/concat-stream/node_modules/safe-buffer/package.json
+task-manager/node_modules/concat-stream/node_modules/safe-buffer/README.md
+task-manager/node_modules/concat-stream/node_modules/string_decoder/.travis.yml
+task-manager/node_modules/concat-stream/node_modules/string_decoder/LICENSE
+task-manager/node_modules/concat-stream/node_modules/string_decoder/package.json
+task-manager/node_modules/concat-stream/node_modules/string_decoder/README.md
+task-manager/node_modules/concat-stream/node_modules/string_decoder/lib/string_decoder.js
+task-manager/node_modules/core-util-is/LICENSE
+task-manager/node_modules/core-util-is/package.json
+task-manager/node_modules/core-util-is/README.md
+task-manager/node_modules/core-util-is/lib/util.js
+task-manager/node_modules/isarray/.npmignore
+task-manager/node_modules/isarray/.travis.yml
+task-manager/node_modules/isarray/component.json
+task-manager/node_modules/isarray/index.js
+task-manager/node_modules/isarray/Makefile
+task-manager/node_modules/isarray/package.json
+task-manager/node_modules/isarray/README.md
+task-manager/node_modules/isarray/test.js
+task-manager/node_modules/minimist/.eslintrc
+task-manager/node_modules/minimist/.nycrc
+task-manager/node_modules/minimist/CHANGELOG.md
+task-manager/node_modules/minimist/index.js
+task-manager/node_modules/minimist/LICENSE
+task-manager/node_modules/minimist/package.json
+task-manager/node_modules/minimist/README.md
+task-manager/node_modules/minimist/.github/FUNDING.yml
+task-manager/node_modules/minimist/example/parse.js
+task-manager/node_modules/minimist/test/all_bool.js
+task-manager/node_modules/minimist/test/bool.js
+task-manager/node_modules/minimist/test/dash.js
+task-manager/node_modules/minimist/test/default_bool.js
+task-manager/node_modules/minimist/test/dotted.js
+task-manager/node_modules/minimist/test/kv_short.js
+task-manager/node_modules/minimist/test/long.js
+task-manager/node_modules/minimist/test/num.js
+task-manager/node_modules/minimist/test/parse_modified.js
+task-manager/node_modules/minimist/test/parse.js
+task-manager/node_modules/minimist/test/proto.js
+task-manager/node_modules/minimist/test/short.js
+task-manager/node_modules/minimist/test/stop_early.js
+task-manager/node_modules/minimist/test/unknown.js
+task-manager/node_modules/minimist/test/whitespace.js
+task-manager/node_modules/multer/index.js
+task-manager/node_modules/multer/LICENSE
+task-manager/node_modules/multer/package.json
+task-manager/node_modules/multer/README.md
+task-manager/node_modules/multer/lib/counter.js
+task-manager/node_modules/multer/lib/file-appender.js
+task-manager/node_modules/multer/lib/make-middleware.js
+task-manager/node_modules/multer/lib/multer-error.js
+task-manager/node_modules/multer/lib/remove-uploaded-files.js
+task-manager/node_modules/multer/node_modules/.bin/mkdirp
+task-manager/node_modules/multer/node_modules/.bin/mkdirp.cmd
+task-manager/node_modules/multer/node_modules/.bin/mkdirp.ps1
+task-manager/node_modules/multer/node_modules/mkdirp/index.js
+task-manager/node_modules/multer/node_modules/mkdirp/LICENSE
+task-manager/node_modules/multer/node_modules/mkdirp/package.json
+task-manager/node_modules/multer/node_modules/mkdirp/readme.markdown
+task-manager/node_modules/multer/node_modules/mkdirp/bin/cmd.js
+task-manager/node_modules/multer/node_modules/mkdirp/bin/usage.txt
+task-manager/node_modules/multer/storage/disk.js
+task-manager/node_modules/multer/storage/memory.js
+task-manager/node_modules/process-nextick-args/index.js
+task-manager/node_modules/process-nextick-args/license.md
+task-manager/node_modules/process-nextick-args/package.json
+task-manager/node_modules/process-nextick-args/readme.md
+task-manager/node_modules/streamsearch/.eslintrc.js
+task-manager/node_modules/streamsearch/LICENSE
+task-manager/node_modules/streamsearch/package.json
+task-manager/node_modules/streamsearch/README.md
+task-manager/node_modules/streamsearch/.github/workflows/ci.yml
+task-manager/node_modules/streamsearch/.github/workflows/lint.yml
+task-manager/node_modules/streamsearch/lib/sbmh.js
+task-manager/node_modules/streamsearch/test/test.js
+task-manager/node_modules/typedarray/.travis.yml
+task-manager/node_modules/typedarray/index.js
+task-manager/node_modules/typedarray/LICENSE
+task-manager/node_modules/typedarray/package.json
+task-manager/node_modules/typedarray/readme.markdown
+task-manager/node_modules/typedarray/example/tarray.js
+task-manager/node_modules/typedarray/test/tarray.js
+task-manager/node_modules/typedarray/test/server/undef_globals.js
+task-manager/node_modules/xtend/.jshintrc
+task-manager/node_modules/xtend/immutable.js
+task-manager/node_modules/xtend/LICENSE
+task-manager/node_modules/xtend/mutable.js
+task-manager/node_modules/xtend/package.json
+task-manager/node_modules/xtend/README.md
+task-manager/node_modules/xtend/test.js
