setting up environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -5595,3 +5595,81 @@ task-manager/node_modules/xtend/mutable.js
 task-manager/node_modules/xtend/package.json
 task-manager/node_modules/xtend/README.md
 task-manager/node_modules/xtend/test.js
+task-manager/config/dev.env
+task-manager/node_modules/.bin/env-cmd
+task-manager/node_modules/.bin/env-cmd.cmd
+task-manager/node_modules/.bin/env-cmd.ps1
+task-manager/node_modules/.bin/node-which
+task-manager/node_modules/.bin/node-which.cmd
+task-manager/node_modules/.bin/node-which.ps1
+task-manager/node_modules/commander/CHANGELOG.md
+task-manager/node_modules/commander/index.js
+task-manager/node_modules/commander/LICENSE
+task-manager/node_modules/commander/package.json
+task-manager/node_modules/commander/Readme.md
+task-manager/node_modules/commander/typings/index.d.ts
+task-manager/node_modules/cross-spawn/CHANGELOG.md
+task-manager/node_modules/cross-spawn/index.js
+task-manager/node_modules/cross-spawn/LICENSE
+task-manager/node_modules/cross-spawn/package.json
+task-manager/node_modules/cross-spawn/README.md
+task-manager/node_modules/cross-spawn/lib/enoent.js
+task-manager/node_modules/cross-spawn/lib/parse.js
+task-manager/node_modules/cross-spawn/lib/util/escape.js
+task-manager/node_modules/cross-spawn/lib/util/readShebang.js
+task-manager/node_modules/cross-spawn/lib/util/resolveCommand.js
+task-manager/node_modules/env-cmd/CHANGELOG.md
+task-manager/node_modules/env-cmd/LICENSE
+task-manager/node_modules/env-cmd/package.json
+task-manager/node_modules/env-cmd/README.md
+task-manager/node_modules/env-cmd/bin/env-cmd.js
+task-manager/node_modules/env-cmd/dist/env-cmd.d.ts
+task-manager/node_modules/env-cmd/dist/env-cmd.js
+task-manager/node_modules/env-cmd/dist/expand-envs.d.ts
+task-manager/node_modules/env-cmd/dist/expand-envs.js
+task-manager/node_modules/env-cmd/dist/get-env-vars.d.ts
+task-manager/node_modules/env-cmd/dist/get-env-vars.js
+task-manager/node_modules/env-cmd/dist/index.d.ts
+task-manager/node_modules/env-cmd/dist/index.js
+task-manager/node_modules/env-cmd/dist/parse-args.d.ts
+task-manager/node_modules/env-cmd/dist/parse-args.js
+task-manager/node_modules/env-cmd/dist/parse-env-file.d.ts
+task-manager/node_modules/env-cmd/dist/parse-env-file.js
+task-manager/node_modules/env-cmd/dist/parse-rc-file.d.ts
+task-manager/node_modules/env-cmd/dist/parse-rc-file.js
+task-manager/node_modules/env-cmd/dist/signal-termination.d.ts
+task-manager/node_modules/env-cmd/dist/signal-termination.js
+task-manager/node_modules/env-cmd/dist/spawn.d.ts
+task-manager/node_modules/env-cmd/dist/spawn.js
+task-manager/node_modules/env-cmd/dist/types.d.ts
+task-manager/node_modules/env-cmd/dist/types.js
+task-manager/node_modules/env-cmd/dist/utils.d.ts
+task-manager/node_modules/env-cmd/dist/utils.js
+task-manager/node_modules/isexe/.npmignore
+task-manager/node_modules/isexe/index.js
+task-manager/node_modules/isexe/LICENSE
+task-manager/node_modules/isexe/mode.js
+task-manager/node_modules/isexe/package.json
+task-manager/node_modules/isexe/README.md
+task-manager/node_modules/isexe/windows.js
+task-manager/node_modules/isexe/test/basic.js
+task-manager/node_modules/path-key/index.d.ts
+task-manager/node_modules/path-key/index.js
+task-manager/node_modules/path-key/license
+task-manager/node_modules/path-key/package.json
+task-manager/node_modules/path-key/readme.md
+task-manager/node_modules/shebang-command/index.js
+task-manager/node_modules/shebang-command/license
+task-manager/node_modules/shebang-command/package.json
+task-manager/node_modules/shebang-command/readme.md
+task-manager/node_modules/shebang-regex/index.d.ts
+task-manager/node_modules/shebang-regex/index.js
+task-manager/node_modules/shebang-regex/license
+task-manager/node_modules/shebang-regex/package.json
+task-manager/node_modules/shebang-regex/readme.md
+task-manager/node_modules/which/CHANGELOG.md
+task-manager/node_modules/which/LICENSE
+task-manager/node_modules/which/package.json
+task-manager/node_modules/which/README.md
+task-manager/node_modules/which/which.js
+task-manager/node_modules/which/bin/node-which
