--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "axios": "0.21.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
