--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.21.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.9.0",
-    "axios": "0.21.0"
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
