--- a/task-manager-client/package.json
+++ b/task-manager-client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
   },
