--- a/task-manager-client/package.json
+++ b/task-manager-client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
@@ -18,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
   },
